--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@payloadcms/next": "^3.26.0",
     "@payloadcms/payload-cloud": "^3.26.0",
     "@payloadcms/richtext-lexical": "^3.26.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.2",
     "graphql": "^16.8.1",
@@ -26,8 +28,11 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
