--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
     "@payloadcms/db-mongodb": "^3.26.0",
     "@payloadcms/next": "^3.26.0",
     "@payloadcms/payload-cloud": "^3.26.0",
     "@payloadcms/richtext-lexical": "^3.26.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-query": "^5.67.3",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -24,19 +29,24 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.2-canary.1",
+    "next-themes": "^0.4.6",
     "payload": "^3.26.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "sharp": "^0.33.5",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.67.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
