--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tanstack/react-query": "^5.67.3",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
@@ -26,7 +27,9 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.2",
+    "fuse.js": "^7.1.0",
     "graphql": "^16.8.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
     "next": "15.2.2-canary.1",
     "next-themes": "^0.4.6",
@@ -35,6 +38,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-select": "^5.10.1",
     "sharp": "^0.33.5",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
@@ -47,6 +51,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tanstack/eslint-plugin-query": "^5.67.2",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
