--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
+    "nanoid": "^5.1.5",
     "next": "15.2.2-canary.1",
     "next-themes": "^0.4.6",
     "payload": "^3.26.0",
