--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
-    "@payloadcms/db-mongodb": "^3.26.0",
-    "@payloadcms/next": "^3.26.0",
-    "@payloadcms/payload-cloud": "^3.26.0",
-    "@payloadcms/plugin-form-builder": "^3.26.0",
-    "@payloadcms/richtext-lexical": "^3.26.0",
+    "@payloadcms/db-mongodb": "^3.34.0",
+    "@payloadcms/next": "^3.34.0",
+    "@payloadcms/payload-cloud": "^3.34.0",
+    "@payloadcms/plugin-form-builder": "^3.34.0",
+    "@payloadcms/richtext-lexical": "^3.34.0",
+    "@payloadcms/ui": "3.34.0",
     "@paypal/paypal-server-sdk": "0.6.0",
     "@paypal/react-paypal-js": "^8.8.2",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -48,7 +49,7 @@
     "nanoid": "^5.1.5",
     "next": "15.2.2-canary.1",
     "next-themes": "^0.4.6",
-    "payload": "^3.26.0",
+    "payload": "^3.34.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
