--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@payloadcms/db-mongodb": "^3.34.0",
+    "@payloadcms/email-nodemailer": "3.34.0",
     "@payloadcms/next": "^3.34.0",
     "@payloadcms/payload-cloud": "^3.34.0",
     "@payloadcms/plugin-form-builder": "^3.34.0",
@@ -35,6 +36,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tanstack/react-query": "^5.67.3",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
