--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@next/third-parties": "^15.3.1",
     "@payloadcms/db-mongodb": "^3.34.0",
     "@payloadcms/email-nodemailer": "3.34.0",
     "@payloadcms/next": "^3.34.0",
@@ -46,6 +47,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.2",
     "fuse.js": "^7.1.0",
+    "google": "link:@next/third-parties/google",
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
